fixed align center

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -873,6 +873,7 @@ html, body
 							background-color: transparent
 							border: none
 							color: #fff
+							text-align: center
 						&.active
 							background-color: #fff
 							> a
